--- a/selfintroduction/build.gradle
+++ b/selfintroduction/build.gradle
@@ -34,3 +34,6 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "-parameters"
+}
