--- a/selfintroduction/src/main/resources/application.properties
+++ b/selfintroduction/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/yuya
 spring.datasource.username=postgres
 spring.datasource.password=Yuyakun123
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.thymeleaf.cache=false
+server.error.include-message=always
